# https://peps.python.org/pep-0517/
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# read more about configuring hatch at:
# https://hatch.pypa.io/latest/config/build/
[tool.hatch.build.targets.wheel]
only-include = ["src"]
sources = ["src"]

[tool.hatch.metadata]
allow-direct-references = true

# https://peps.python.org/pep-0621/
[project]
name = "opm-processing-v2"
version = "0.10.0"
description = "qi2lab OPM post-processing package v2"
readme = "README.md"
requires-python = ">=3.12,<3.13"
license = { text = "BSD-3-Clause" }
authors = [{ name = "Douglas Shepherd", email = "douglas.shepherd@asu.edu" }]
# https://pypi.org/classifiers/
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Typing :: Typed",
]
# add your package dependencies here
dependencies = [
    "basicpy @ git+https://github.com/QI2lab/BaSiCPy.git@main",
    "cmap",
    "napari[all]",
    "napari-ome-zarr>=0.9.0",
    "napari-plugin-engine",
    "numba",
    "numpy",
    "ome-types[lxml]",
    "psutil",
    "psfmodels",
    "pyyaml",
    "rich",
    "ryomen",
    "scikit-image",
    "scipy",
    "tensorstore",
    "tifffile",
    "torch",
    "torchvision",
    "tqdm",
    "typer",
    "yaozarrs[io,write-tensorstore] @ git+https://github.com/dpshepherd/yaozarrs.git@fix-v3-extra-attributes-location",
    "zarr>3.0.8",
]

[project.optional-dependencies]
gpu = [
    "cucim-cu12==26.6.*; sys_platform == 'linux'",
    "cupy-cuda12x[ctk]>=14.1.1",
]

[tool.uv.sources]
torch = [
    { index = "pytorch-cu129", marker = "extra == 'gpu' and sys_platform == 'linux'" },
]
torchvision = [
    { index = "pytorch-cu129", marker = "extra == 'gpu' and sys_platform == 'linux'" },
]

[[tool.uv.index]]
name = "pytorch-cu129"
url = "https://download.pytorch.org/whl/cu129"
explicit = true

[[tool.uv.index]]
name = "nvidia"
url = "https://pypi.nvidia.com"

[tool.uv]
default-groups = []

[dependency-groups]
dev = [
    "ipython",
    "pdbpp",  # https://github.com/pdbpp/pdbpp
    "pytest",
    "pytest-cov",
    "rich",  # https://github.com/Textualize/rich
    "ruff",
]

[project.urls]
homepage = "https://github.com/qi2lab/opm-processing-v2"
repository = "https://github.com/qi2lab/opm-processing-v2"

# Entry points
# https://peps.python.org/pep-0621/#entry-points
# same as console_scripts entry point
[project.scripts]
process = "opm_processing.process:main"
display = "opm_processing.display:main"
fuse = "opm_processing.fuse:main"

# [project.entry-points."some.group"]
# tomatoes = "opm_processing:main_tomatoes"

[tool.ruff]

[tool.ruff.lint]
ignore = ["E402"]


# https://docs.pytest.org/
[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]
filterwarnings = [
    "error",
    "ignore::pydantic.warnings.PydanticDeprecatedSince20",
]

# https://coverage.readthedocs.io/
[tool.coverage.report]
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "@overload",
    "except ImportError",
    "\\.\\.\\.",
    "raise NotImplementedError()",
    "pass",
]

[tool.coverage.run]
source = ["opm_processing"]

# https://github.com/mgedmin/check-manifest#configuration
# add files that you want check-manifest to explicitly ignore here
# (files that are in the repo but shouldn't go in the package)
[tool.check-manifest]
ignore = [
    ".pre-commit-config.yaml",
    ".ruff_cache/**/*",
    "tests/**/*",
]
